# PsyNeuLinkView

./: .env  .gitignore  Dockerfile.testing  README.md  config-overrides.js  dev-package.json  dev_setup.sh  forge.config.js  installation.sh  package-lock.json  package.json  pre_installation.sh  requirements.txt  sample.json  test-memory.js  tsconfig.json
.github/workflows/: build.yml  installers.yml  release.yml
applications/psnlv/: Dockerfile
deployment/: codefresh-dev.yaml
deployment-configuration/: codefresh-template-dev.yaml  values-template.yaml
deployment-configuration/helm/: Chart.yaml
package/: .linux_installer.sh.swp  README.md  configuration.py  linux_installer.sh  mac_installer.sh  pyproject.toml  requirements.txt  setup.py
package/installers/: generate_linux_binary.sh  installer.py  linux  linux.sh  macos.scpt  requirements.txt
package/psyneulinkviewer/: conda.py  configuration.py  node.py  rosetta.py  start.py
package/psyneulinkviewer.egg-info/: PKG-INFO
package/scripts/: linux_installer.sh  mac_installer.sh
package/src/: setup.py
pip_installation/psyneulinkviewer/: __main__.py  pyproject.toml
pip_installation/psyneulinkviewer/src/: config.toml
public/: appState.js  electron.js  index.html  preload.js  splash.css  splash.html
src/: App.css  App.js  constants.ts  index.css  messageTypes.js  nodeConstants.js  theme.js
test_models/: ColorMotionTask_SIMPLE.py  EGO Model - CSW with Simple Integrator.py  EVC-Gratton Composition.py  LC Control Mechanism Composition.py  StabilityFlexibility.py  input_data.py  pnlv-plotting-test.py  test1.py
(+312 files in other folders)
