[project]
name = "PsyNeuLinkView"
version = "0.0.5"
authors = [
  { name="Metacell", email="metacell@metacell.com" },
]
description = "Metacell Package"
readme = "README.md"
requires-python = "==3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/Metacell/PsyNeuLinkView"
Issues = "https://github.com/Metacell/PsyNeuLinkView/issues"