# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psyneulinkviewer"
version = "0.0.5"
description = "PsyNeuLink Model Viewer"
readme = "README.md"
authors = [{ name = "PsyNeuLinkViewer", email = "dario@metacell.us" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["psyneulink", "modeling", "neural networks", "computational neuroscience"]
dependencies = [
    "redbaron == 0.9.2",
    "graphviz == 0.16",
    'tomli; python_version >= "3.11"',
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/MetaCell/PsyNeuLinkView"

[project.scripts]
psyneulinkviewer = "psyneulinkviewer.__main__:main"
